--- a/views/single/Galerie-single.ejs
+++ b/views/single/Galerie-single.ejs
@@ -12,7 +12,7 @@
 					<div class="carousel-inner" role="listbox">
 						<% if (locals.images) { %> <% locals.images.forEach(function (item, index) { %>
 						<div class="carousel-item img-fluid <% if(index == 0) { %>active<% } %>">
-							<a href="#expand"><img class="expandable" src="/api/image/<%= item._id %>" alt="<%= index %>slide" /></a>
+							<a href="#expand"><img class="expandable" src="<%= item.path %>" alt="<%= index %>slide" /></a>
 							<div class="carousel-caption d-none d-md-block"></div>
 						</div>
 						<% }) %> <% } %>
@@ -112,7 +112,7 @@
 
 <a class="lightbox-close" href="#close">
 	<div class="lightbox-target" id="expand">
-		<img alt="Expanded Image" id="expandImg" src="/api/image/<%= locals.images[0]._id %>" />
+		<img alt="Expanded Image" id="expandImg" src="<%= locals.images[0].path %>" />
 	</div>
 </a>
 
