--- a/views/restricted/Gallery-patch.ejs
+++ b/views/restricted/Gallery-patch.ejs
@@ -24,7 +24,7 @@
 						<input class="inputfile" type="file" name="img" id="img" multiple />
 					</div>
 					<% if (locals.images) { %> <% locals.images.forEach(function (item) { %>
-					<img class="w-100 m-1" id="<%= item._id %>" src="/api/image/<%= item._id %>" />
+					<img class="w-100 m-1" id="<%= item._id %>" src="<%= item.path %>" />
 					<div id="actDiv<%= item._id %>" class="action-div <% if (item.isMain === true) { %> nodisplay<% } %>">
 						<a id="del<%= item._id %>" data-del="true" href="/api/image/delete/<%= item._id %>"><i class="fas fa-trash-alt"></i></a>
 						<a id="sel<%= item._id %>" data-sel="true" href="/api/image/select/Gallery/<%= locals.gallery._id %>/<%= item._id %>"><i class="fas fa-star"></i></a>
