--- a/views/Shop.ejs
+++ b/views/Shop.ejs
@@ -12,7 +12,7 @@
 			<% if (locals.original){ %> <% Object.keys(locals.original).forEach(function (index) { %>
 			<div class="card" id="<%= locals.original[index]._id %>">
 				<a class="card-img-expand" href="/Shop/<%= locals.original[index]._id %>"
-					><img src="/api/image/<%= locals.original[index].mainImgId %>" class="card-img-top" alt="Shop painting - <%= locals.original[index].title %>"
+					><img src="<%= locals.original[index].mainImgPath %>" class="card-img-top" alt="Shop painting - <%= locals.original[index].title %>"
 				/></a>
 				<div class="card-body">
 					<h5 class="card-title">
@@ -22,7 +22,6 @@
 					<div class="row shop-price-row mt-4">
 						<div class="shop-price-col col-6 pt-2">
 							<b class="card-price"><%= locals.original[index].price %>€</b>
-							<!--<b class="isUnique">Unique Painting</b>-->
 						</div>
 
 						<div class="col-6">
