changed biopic return

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -53,7 +53,7 @@
 
 				<div class="bio-img-wrapper col-lg-4 z-0">
 					<div class="sub-img-wrapper mt-5">
-						<img alt="Biography Picture - Portrait Image" class="bio-img w-100" src="<%= locals.biopic.path %>" />
+						<img alt="Biography Picture - Portrait Image" class="bio-img w-100" src="<%= locals.biopic %>" />
 					</div>
 				</div>
 			
@@ -74,7 +74,7 @@
 
 			<!--<div class="bio-img-wrapper col-md-4 z-0">
 				<div class="sub-img-wrapper mt-5">
-					<img alt="Biography Picture - Portrait Image" class="bio-img w-100" src="<%= locals.biopic.path %>" />
+					<img alt="Biography Picture - Portrait Image" class="bio-img w-100" src="<%= locals.biopic %>" />
 				</div>
 			</div>
 			<div class="first-bio col-md-8">
