--- a/views/restricted/Front-post.ejs
+++ b/views/restricted/Front-post.ejs
@@ -5,7 +5,7 @@
 		<div class="col-md-12">
 			<h1 class="square-title text-center">Modifier les images de l'accueil</h1>
 			<div class="alert alert-info alert-static" role="alert">Pensez à utiliser des images au format paysage...</div>
-			<% if (locals.front) { %> <% for (let index = 0; index < 5; index++) { %> <% if (locals.front[index] && locals.front[index].null != true) { %>
+			<% for (let index = 0; index < 5; index++) { %> <% if (locals.front[index] && locals.front[index].null != true) { %>
 			<form class="text-center front-form mt-3 <% if (index % 2 === 0) { %>even<% } %>" name="upload<%= index %>" action="/api/front/post" method="POST" enctype="multipart/form-data">
 				<div class="form-group" id="uploadGroup<%= index %>">
 					<label for="upload<%= index %>" class="filebtn">Choisir une image</label>
