--- a/views/restricted/Front-post.ejs
+++ b/views/restricted/Front-post.ejs
@@ -37,7 +37,7 @@
 					<button type="submit" name="submit" class="submit-btn">Valider</button>
 				</div>
 			</form>
-			<% } %> <% } %> <% } else { %>
+			<% } else { %>
 			<form class="text-center front-form <% if (index % 2 === 0) { %>even<% } %>" name="upload0" action="/api/front/post" method="POST" enctype="multipart/form-data">
 				<div class="form-group" id="uploadGroup0">
 					<label for="upload0" class="filebtn">Choisir une image</label>
