debugging empty cart and price formatting (attempt)

--- a/views/Cart.ejs
+++ b/views/Cart.ejs
@@ -4,6 +4,7 @@
 	<div class="container">
 		<div class="col-md-10 offset-md-1 p-0">
 			<div class="text-center">
+				<%= locals.totalprice %>
 				<b class="square-title text-center <% if (locals.totalPrice !== '0' && locals.totalPrice != '0.00') { %>nodisplay<% } %>" id="alertEmpty">Your cart is empty!</b>
 			</div>
 		</div>
