--- a/views/Cart.ejs
+++ b/views/Cart.ejs
@@ -4,15 +4,13 @@
 	<div class="container">
 		<div class="col-md-10 offset-md-1 p-0">
 			<div class="text-center">
-				<%= locals.totalprice %>
-				<b class="square-title text-center <% if (locals.totalPrice !== '0' && locals.totalPrice != '0.00') { %>nodisplay<% } %>" id="alertEmpty">Your cart is empty!</b>
+				<%= locals.totalPrice %>
+				<b class="square-title text-center <% if (!locals.totalPrice || (locals.totalPrice !== '0' && locals.totalPrice != '0.00')) { %>nodisplay<% } %>" id="alertEmpty">Your cart is empty!</b>
 			</div>
 		</div>
 		<% if(locals.products && locals.totalPrice != 0 && locals.totalQty != 0){ %>
 		<div class="col-md-10 offset-md-1 p-0" data-cartrecap="true">
 			<h1 class="square-title text-center">Your Cart</h1>
-			<!-- add no display here when emptying cart-->
-
 			<div class="payment-div">
 				<h3>
 					SHIPPING FEE = <% if (locals.deliveryPrice && locals.deliveryPrice.response.shippingPriceIncludingTax) { %>
@@ -23,32 +21,6 @@
 				<h3>TOTAL QTY = <b data-totalqty="true"><%= locals.totalQty %></b></h3>
 				<h3>TOTAL = <b data-totalprice="true"><%= locals.totalPrice %>€</b></h3>
 			</div>
-			<!--<div class="payment-div">
-					<% if (locals.deliveryPrice && locals.deliveryPrice.response.shippingPriceIncludingTax) { %>
-					<h4><%= locals.deliveryPrice.response.shippingPriceIncludingTax %>€</h4>
-					<% } else { %>
-					<h4>FREE</h4>
-					<% } %>
-					<h4><%= locals.totalQty %></h4>
-					<h4><%= locals.totalPrice %>€</h4>
-				</div>-->
-			<!--
-				<div class="cart-row">
-					<span class="cart-item cart-header cart-column">SHIPPING FEE</span>
-					<span class="cart-quantity cart-header cart-column">TOTAL QTY</span>
-					<span class="cart-price cart-header cart-column">TOTAL €</span>
-				</div>
-				<div class="cart-row">
-					<% if (locals.deliveryPrice && locals.deliveryPrice.response.shippingPriceIncludingTax) { %>
-					<span class="cart-item cart-header cart-column"><%= locals.deliveryPrice.response.shippingPriceIncludingTax %>€</span>
-					<% } else { %>
-					<span class="cart-item cart-header cart-column">FREE</span>
-					<% } %>
-					<span class="cart-quantity cart-header cart-column"><%= locals.totalQty %></span>
-					<span class="cart-price cart-header cart-column"><%= locals.totalPrice %>€</span>
-				</div>
-				-->
-
 			<div class="cart-row" id="cart-row-header">
 				<span class="cart-item cart-header cart-column">ITEM</span>
 				<span class="cart-quantity cart-header cart-column">QUANTITY</span>
