added loader for pwinty operations and payment

--- a/views/Cart.ejs
+++ b/views/Cart.ejs
@@ -71,6 +71,7 @@
 				</div>
 			</div>
 
+			<img alt="gif animation loading" id="loader" src="/img/loader.gif" />
 			<% }) %> <% if (locals.totalPrice != 0 && locals.totalQty != 0) { %> <% } %>
 
 			<div class="payment-div" data-cartrecap="true">
