--- a/views/Payment.ejs
+++ b/views/Payment.ejs
@@ -30,6 +30,7 @@
 					<!--<button class="btn-pay mt-3">Submit Payment</button>-->
 				</form>
 			</div>
+			<img alt="gif animation loading" id="loader" src="/img/loader.gif" />
 		</div>
 	</div>
 	<% include partials/footer %>
