--- a/views/single/Galerie-single.ejs
+++ b/views/single/Galerie-single.ejs
@@ -100,6 +100,7 @@
 			<h1 class="pwinty-title mt-2 nodisplay" data-attributes>Options</h1>
 			<div class="form-group text-center pwinty-wrapper" id="attributes"></div>
 
+			<img alt="gif animation loading" id="loader" src="/img/loader.gif" />
 			<div class="pbox-wrapper">
 				<div id="purchasebox" class="col-md-6 offset-md-3 text-center nodisplay">
 					<span id="price" class="card-price-gallery"></span>
