--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -11,6 +11,7 @@ events {
 http {
 	include mime.types;
 	default_type application/octet-stream;
+	client_max_body_size 25M;
 
     gzip on;
 	#gzip_comp_level 2;
