updated instagram href

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -171,7 +171,7 @@
 		<h1 class="square-title text-center">Social Medias</h1>
 		<ul class="footer-list text-center">
 			<li>
-				<a href="https://www.instagram.com/maral.abk/" class="social-btn" target="_blank"><i class="fab fa-instagram"></i></a>
+				<a href="https://www.instagram.com/maral.abkarian/" class="social-btn" target="_blank"><i class="fab fa-instagram"></i></a>
 			</li>
 			<li>
 				<a href="https://www.facebook.com/abkarian.maral/" class="social-btn" target="_blank"><i class="fab fa-facebook-f"></i></a>
