--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,7 +15,7 @@
 	<div class="container container-front pb-0 mb-0">
 		<div class="carousel-home">
 			<div id="carousel-thumb" class="carousel slide carousel-thumbnails" data-ride="carousel">
-				<!--Slides-->
+				<!--Slides--->
 				<div class="carousel-inner" role="listbox">
 					<% if (locals.front) { %> <% i = 0; %> <% for (let index = 0; index < 5; index++) { %> <% if (locals.front[index] && locals.front[index].null != true) { %>
 					<div class="carousel-item <% if(index == 0) { %>active<% } %>">
