--- a/views/plsauth.ejs
+++ b/views/plsauth.ejs
@@ -1,5 +1,6 @@
 <% include partials/head %>
-<div class="container">
+<div class="container full-container even">
+	<h1 class="square-title text-center">Website is currently undergoing maintenance</h1>
 	<div class="wrapper-404">
 		<form method="POST" action="/plsauth">
 			<input type="text" name="authlog" />
