--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 	<head>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-173937073-1"></script>
@@ -7,6 +7,7 @@
 
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+		<meta name="meta image" property="og:image" content="/img/screencap.png" />
 		<meta name="csrf-token" content="<%= locals.csrfToken %>" />
 		<meta name="description" content="<%= locals.description %>" />
 		<meta name="keywords" content="Art, Arts, Painting, Paintings, Buy, Purchase, Maral, Akbarian, Copy, Replica, Replicas, Copies, Unique, Beautiful, Reproduction, Actress, Peinture, Tableaux" />
