trying to fix metadata img and pls auth interaction

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -7,7 +7,7 @@
 
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-		<meta name="meta image" property="og:image" content="/img/screencap.png" />
+		<meta name="meta image" property="og:image" content="https://www.maral.fr/img/screencap.png" />
 		<meta name="csrf-token" content="<%= locals.csrfToken %>" />
 		<meta name="description" content="<%= locals.description %>" />
 		<meta name="keywords" content="Art, Arts, Painting, Paintings, Buy, Purchase, Maral, Akbarian, Copy, Replica, Replicas, Copies, Unique, Beautiful, Reproduction, Actress, Peinture, Tableaux" />
