fixing img metadata when in maintenance mode

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,9 +5,10 @@
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-173937073-1"></script>
 		<script src="/scripts/analytics.js"></script>
 
+	
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-		<meta name="meta image" property="og:image" content="https://www.maral.fr/img/screencap.png" />
+		<meta name="meta image" property="og:image" content="https://i.imgur.com/A5jZoGl.png" />	<!-- https://www.maral.fr/img/screencap.png  -->
 		<meta name="csrf-token" content="<%= locals.csrfToken %>" />
 		<meta name="description" content="<%= locals.description %>" />
 		<meta name="keywords" content="Art, Arts, Painting, Paintings, Buy, Purchase, Maral, Akbarian, Copy, Replica, Replicas, Copies, Unique, Beautiful, Reproduction, Actress, Peinture, Tableaux" />
