updating maral, fixing metaimg, fixing plsauth routing and rendering

--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,10 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap"); /* main */
 @import url("https://fonts.googleapis.com/css?family=Anton&display=swap"); /* used for 404 */
 
+.maintenance {
+	background: transparent !important;
+}
+
 /* GLOBAL */
 :root {
 	--brand-blue-m2: #0060d2;
