--- a/views/plsauth.ejs
+++ b/views/plsauth.ejs
@@ -1,12 +1,15 @@
 <% include partials/head %>
-<div class="container full-container even">
-	<h1 class="square-title text-center">Website is currently undergoing maintenance</h1>
-	<div class="wrapper-404">
-		<form method="POST" action="/plsauth">
-			<input type="text" name="authlog" />
-			<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
-			<input type="submit" />
-		</form>
+<div class="full-container full-container-one maintenance">
+	<div class="container">
+		<h1 class="square-title text-center">Waiting for the Client to upload content</h1>
+		<div class="wrapper-404 mt-5">
+			<form method="POST" action="/plsauth">
+				<input type="text" name="authlog" />
+				<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
+				<input type="submit" />
+			</form>
+		</div>
 	</div>
+
 	<% include partials/footer %>
 </div>
