--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,43 +1,38 @@
 <!DOCTYPE html>
-<html lang="en" prefix="og: http://ogp.me/ns#">
+<html lang="en">
+	<!-- prefix="og: http://ogp.me/ns#" -->
 	<head>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-173937073-1"></script>
 		<script src="/scripts/analytics.js"></script>
 
-	
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-		<meta name="meta image" property="og:image" content="https://www.maral.fr/img/screencap.png" />
+		<meta name="meta image" property="image" content="https://www.maral.fr/img/screencap.png" />
 		<meta name="csrf-token" content="<%= locals.csrfToken %>" />
 		<meta name="description" content="<%= locals.description %>" />
 		<meta name="keywords" content="Art, Arts, Painting, Paintings, Buy, Purchase, Maral, Akbarian, Copy, Replica, Replicas, Copies, Unique, Beautiful, Reproduction, Actress, Peinture, Tableaux" />
 		<!-- add keywords -->
 		<meta name="author" content="Maral Abkarian" />
 		<title><%= (locals.headtitle) ? locals.headtitle : 'Maral' %></title>
+
 		<!-- JQuery -->
-		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+		<script type="text/javascript" src="/jQuery.min.js"></script>
+
 		<!-- FontAwesome Icons -->
-		<script src="https://kit.fontawesome.com/ba18cbd714.js"></script>
+		<script src="/fontawesome.kit.js"></script>
+
 		<!-- Bootstrap -->
-		<link
-			rel="stylesheet"
-			href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-			crossorigin="anonymous"
-		/>
-		<script
-			src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-			integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-			crossorigin="anonymous"
-		></script>
+		<link rel="stylesheet"href="/bootstrap.min.css"/>
+		<script src="/bootstrap.min.js"></script>
+
 		<!-- CUSTOM -->
 		<link rel="icon" href="/favicon.png" />
 		<link rel="stylesheet" href="/style.css" />
+
 		<!-- Quill RTE -->
 		<script src="/quill/quill.core.js"></script>
 		<script src="/quill/quill.js"></script>
-
 		<link rel="stylesheet" href="/quill/quill.snow.css" />
 		<link rel="stylesheet" href="/quill/quill.core.css" />
 
