--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer>
   <div class="footer-copyright text-center">
-    <p class="mb-0 p-1">© 2020 Copyright Maral - <a href="/Legals">Legals <i class="fa fa-gavel"></i></a> - Developed by <a id="ablin" href="https://www.ablin.dev" target="_blank"> @ablin42</a></p>
+    <p class="mb-0 p-1">© 2020 Copyright Maral - <a href="/Legals">Legals <i class="fa fa-gavel"></i></a> - Developed by <a id="ablin" href="https://www.ablin.dev" target="_blank"> ablin@dev</a></p>
   </div>
 </footer>
 </body>
