--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
-	<!-- prefix="og: http://ogp.me/ns#" -->
+<html lang="en" prefix="og: https://ogp.me/ns#">
 	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-173937073-1"></script>
 		<script src="/scripts/analytics.js"></script>
 
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+		<meta name="robots" content="index,follow" />
+		<meta name="application-name" content="<%= (locals.headtitle) ? locals.headtitle : 'Maral Paintings' %>" />
+		<meta name="url" content="https://www.maral.fr/" />
+		<meta name="identifier-URL" content="https://www.maral.fr/" />
+		<meta name="category" content="Art & Paintings" />
+		<meta property="og:title" content="<%= (locals.headtitle) ? locals.headtitle : 'Maral Paintings' %>" />
+		<meta property="og:description" content="<%= locals.description %>" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://www.maral.fr/" />
+		<meta property="og:image" content="https://www.maral.fr/img/screencap.png" />
 		<meta name="meta image" property="image" content="https://www.maral.fr/img/screencap.png" />
 		<meta name="csrf-token" content="<%= locals.csrfToken %>" />
 		<meta name="description" content="<%= locals.description %>" />
-		<meta name="keywords" content="Art, Arts, Painting, Paintings, Buy, Purchase, Maral, Akbarian, Copy, Replica, Replicas, Copies, Unique, Beautiful, Reproduction, Actress, Peinture, Tableaux" />
-		<!-- add keywords -->
-		<meta name="author" content="Maral Abkarian" />
-		<title><%= (locals.headtitle) ? locals.headtitle : 'Maral' %></title>
+		<meta name="keywords" content="Art, Arts, Painting, Paintings, Buy, Purchase, Maral, Akbarian, Copy, Replica, Replicas, Copies, Unique, Beautiful, Reproduction, Actress, Peinture, Tableaux, Website, ablin, ablin.dev, ablin@dev, Andréas Blin, Andréas, Blin" />
+		<meta name="author" content="Andréas Blin, Fullstack Web Developer https://www.ablin.dev" />
+
+		<title><%= (locals.headtitle) ? locals.headtitle : 'Maral Paintings' %></title>
 
 		<!-- JQuery -->
 		<script type="text/javascript" src="/jQuery.min.js"></script>
